refac: using cookies fot auth instead of header Authorization
